tests/tests/legacy_kustomizations/istio/test_data/expected/networking.istio.io_v1alpha3_serviceentry_google-storage-api-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: google-storage-api-entry
  namespace: istio-system
spec:
  hosts:
  - storage.googleapis.com
  location: MESH_EXTERNAL
  ports:
  - name: https
    number: 443
    protocol: HTTPS
  resolution: DNS
