tests/tests/legacy_kustomizations/istio/test_data/expected/rbac.istio.io_v1alpha1_clusterrbacconfig_default.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ClusterRbacConfig
metadata:
  name: default
  namespace: istio-system
spec:
  exclusion:
    namespaces:
    - istio-system
  mode: "ON"
