tests/tests/legacy_kustomizations/istio/test_data/expected/~g_v1_configmap_istio-parameters-5gbcdmk5fd.yaml
apiVersion: v1
data:
  clusterRbacConfig: "ON"
  gatewaySelector: ingressgateway
  namespace: istio-system
kind: ConfigMap
metadata:
  annotations: {}
  labels: {}
  name: istio-parameters-5gbcdmk5fd
  namespace: istio-system
