tests/tests/legacy_kustomizations/istio/test_data/expected/~g_v1_configmap_istio-parameters-797cg68672.yaml
apiVersion: v1
data:
  clusterRbacConfig: "ON"
  gatewaySelector: ingressgateway
kind: ConfigMap
metadata:
  annotations: {}
  labels: {}
  name: istio-parameters-797cg68672
  namespace: kubeflow
